struct Address{
    1: string unique_id;
    2: string last_known_ip;
    3: i32 last_known_port;
}
